construction site style

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
-	<title>jages on github</title>
+	<title>Jan Geske, Software Developer - jages.dev</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>It's dangerous to go alone...</h1>
+	<div class="construction"></div>
+	<p>...but this page is still under construction.</p>
+	<div class="construction"></div>
+	<p>So you may want to check out my stuff on <a href="https://github.com/jages">github</a> instead.</p>
 </body>
 </html>
